# Machine_Learning

./: .gitignore
Machine_Learning_Python/: main.py  pyproject.toml
Machine_Learning_Python/Anomalies_Detection/ARIMA/: data_exploring.ipynb
Machine_Learning_Python/Audio_ML/: Define_Fourrier_Transform.ipynb  FFT_examples.ipynb  Intuition_Fourier_Transform.ipynb  simple_torch_MNIST.py
Machine_Learning_Python/Autoencoder/: simple_autoencoder_pytorch.py
Machine_Learning_Python/CNN/: CNN.py  CNN_cifar10.py  CNN_example.h5  GoogleLeNet.py  Readme.mb  inception.py  lenet.py  resnet.py  resnet_50.py
Machine_Learning_Python/Classification/: K_Nearest_Neighbors.ipynb  Readme  breast-cancer-wisconsin.data  wine_classification.py  xor_pytorch.py
Machine_Learning_Python/LangChain_examples/: simplechat.py
Machine_Learning_Python/Linear_Regression/: Linear_Regression_Function_From_Scratch  Linear_Regression_Google_stocks.py  Machine_Learning_Simple_Linear_Regression_Ex.ipynb  Machine_Learning_test.ipynb  Readme  linear_regression_torch.py
Machine_Learning_Python/MNIST/: MNIST_NN_TFGPU2_0.py  MNIST_PYTORCH.py
Machine_Learning_Python/MNIST_app/: app.py
Machine_Learning_Python/Movie_IMDB_dataset/: IMDB_model.py  test.txt
Machine_Learning_Python/RNN/: .gitignore  README.md  RNN.py
Machine_Learning_Python/SVM/: Readme  SVM_test.py
Machine_Learning_Python/Teste/: Machine_Learning_test_1_checkpoint.ipynb  numpy_ex.py  torch_ex.py
Machine_Learning_Python/object_detection/: Intro_to_SuperGradients_+_YOLONAS_Starter_Notebook.py  capture_face.py
(+49 files in other folders)
